overflow corrections on carousel CarouselSlick

--- a/src/components/CarouselSlick/Carousel.scss
+++ b/src/components/CarouselSlick/Carousel.scss
@@ -1,8 +1,12 @@
+.carousellContainer{
+    width: 96%;
+
+}
 .imgCarrusel{
     width: 6.25rem;
     margin-top: 6.25rem;
   
-    padding: 5px;
+    
     img{
         width: 9.375rem;
     }
