--- a/src/components/HomeContainer/HomeContainer.scss
+++ b/src/components/HomeContainer/HomeContainer.scss
@@ -93,7 +93,7 @@
   .aboutContainer {
     width: 100%;
     height: 663px;
-    margin: 3.125rem;
+    margin: 3.125rem 0 3.125rem 0;
     background-image: url("../../img/backcannavis.png");
     background-position: center;
     background-repeat: no-repeat;
