--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -126,13 +126,13 @@
   .iconWhatsappContainer {
     display: flex;
     position: fixed;
-    width: 100%;
+   width: 100%;
     justify-content: flex-end;
     top: 10.625rem;
     z-index: 500;
 
     img {
-      margin-right: 1.25rem;
+      
       width: 3.25rem;
     }
     button {
